# dosyaKarsilastirma

./: .eslintrc.cjs  .prettierrc  App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  start.bat  tsconfig.json  types.ts  vite.config.ts
components/: DataInput.tsx  Logger.tsx  PdfExportModal.tsx  ResultsTable.tsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DataInput.tsx  Logger.tsx  PdfExportModal.tsx  ResultsTable.tsx  index.ts
src/components/common/: ErrorFallback.tsx  HelpDialog.tsx  Skeleton.tsx  SplashScreen.tsx  ThemeToggle.tsx  Toast.tsx  UpdateNotification.tsx  index.ts
src/constants/: index.ts
src/context/: ThemeContext.tsx  ToastContext.tsx  index.ts
src/hooks/: index.ts  useAutoUpdate.ts  useKeyboardShortcuts.ts  useUpdateButton.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: processor.ts
utils/: processor.ts
